Order list faster animation Mobile -> Modal module-details translateY fix

--- a/src/components/OrderPanel/OrderListMain/OrderListMain.scss
+++ b/src/components/OrderPanel/OrderListMain/OrderListMain.scss
@@ -23,7 +23,7 @@
     top: 0;
     z-index: 500;
     transform: translateX(100%);
-    transition: all 0.6s linear 0s;
+    transition: all 0.4s linear 0s;
     &__close-icon {
       display: inline-block;
       width: 4em;
